# libffshit

./: .editorconfig  .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  ffshitConfig.cmake.in  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: dev.yml  release.yml
inc/ffshit/: blocks.h  detector.h  ex.h  fullflash.h  help.h  rawdata.h  system.h  version.h
inc/ffshit/filesystem/: base.h  directory.h  ex.h  extract.h  file.h  help.h  newsgold.h  newsgold_x85.h  sgold.h
inc/ffshit/filesystem/platform/: base.h  builder.h  egold.h  egold_ce.h  newsgold.h  newsgold_x85.h  platform.h  sgold.h  sgold2.h  sgold2_elka.h  types.h
inc/ffshit/filesystem/structure/: attributes.h  directory.h  file.h  structure.h
inc/ffshit/log/: interface.h  logger.h
inc/ffshit/partition/: block.h  ex.h  partition.h  partitions.h
inc/ffshit/patterns/: ex.h  pattern.h  raw.h
inc/ffshit/platform/: detector.h  types.h
packaging/deb/: build_debian_12.sh  build_ubuntu_24.04.sh  deb.cmake  pack.sh
packaging/wasm/: build_wasm.sh
packaging/win/: mingw64.cmake
src/: blocks.cpp  detector.cpp  fullflash.cpp  rawdata.cpp  system.cpp  version.cpp
src/filesystem/: directory.cpp  extract.cpp  file.cpp  help.cpp  newsgold.cpp  newsgold_x85.cpp  sgold.cpp
src/filesystem/platform/: builder.cpp  egold.cpp  egold_ce.cpp  newsgold.cpp  newsgold_x85.cpp  sgold.cpp  sgold2.cpp  sgold2_elka.cpp
src/filesystem/structure/: attributes.cpp  directory.cpp  file.cpp
src/partition/: block.cpp  partition.cpp  partitions.cpp
src/platform/: detector.cpp
wasm/: FFS.h  example.ts  index.ts  main.cpp
